<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="56dp"
    android:clipToPadding="false"
    tools:context=".PrimerFragment">

    <!-- Título Fijo -->
    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TituloLucha"
        android:textSize="24sp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="16dp" />

    <!-- ScrollView debajo del título -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textViewTitulo"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/black">

            <!-- Texto general sobre baloncesto -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Descripcion_lucha"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <!-- Texto específico sobre LeBron James -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tripleh"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:paddingTop="20dp" />

            <!-- Contenedor Horizontal para las Imágenes -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:gravity="center">

                <!-- Imagen de LeBron James -->


                <!-- Imagen de Anillos de campeonato -->



                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tripleh" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/thegame" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>